--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ktvr.ktvr_team45">
-    <uses-feature android:name="android.hardware.camera2"></uses-feature>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
+    <uses-feature android:name="android.hardware.camera2" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,14 +19,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".DriverProfile"
-            android:label="@string/title_activity_driver_profile"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".BusCodeActivity" />
         <activity android:name=".GrievanceActivity" />
         <activity android:name=".ShiftInProgressActivity" />
-        <activity android:name=".ScanActivity"></activity>
+        <activity android:name=".ScanActivity" />
+        <activity
+            android:name=".Grievances"
+            android:label="@string/title_activity_grievances"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Splashscreen" />
+        <activity
+            android:name=".DriverProfile"
+            android:label="@string/title_activity_driver_profile"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".MessageAdmin"></activity>
     </application>
 
 </manifest>
